--- a/admin.html
+++ b/admin.html
@@ -30,7 +30,10 @@
                 <input type="text" id="image" name="image">
             </div>
 
-            <button type="button">Home</button>
+            <a href="page.html" style="text-decoration: none;">
+                <button type="button">Home</button>
+            </a>
+            
         </form>
     </div>
 </body>
