--- a/page.html
+++ b/page.html
@@ -39,7 +39,10 @@
                 <tr><td>Alpi carnice</td></tr>
                 <tr><td>...</td></tr>
             </table>
-            <button class="btn btn-success">admin</button>
+            <a href="login.html" style="text-decoration: none;">
+                <button class="btn btn-success">admin</button>
+            </a>
+           
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
