--- a/login.html
+++ b/login.html
@@ -15,8 +15,10 @@
 
             <label for="password">Password</label>
             <input type="password" id="password" name="password">
-
-            <button type="submit">login</button>
+            <a href="admin.html" style="text-decoration: none;">
+                <button type="submit">login</button>
+            </a>
+            
         </form>
     </div>
 </body>
