--- a/adminTable.html
+++ b/adminTable.html
@@ -18,43 +18,66 @@
       <tbody>
         <tr>
           <td>Immagine 1</td>
-          <td><button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button></td>
+
+          <td>
+            <a href="admin.html" style="text-decoration: none;">
+              <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
+          </a>
+        </td>
         </tr>
         <tr>
           <td>Immagine 2</td>
-          <td><button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button></td>
+          <td><a href="admin.html" style="text-decoration: none;">
+            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
+        </a></td>
         </tr>
         <tr>
           <td>Immagine 3</td>
-          <td><button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button></td>
+          <td><a href="admin.html" style="text-decoration: none;">
+            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
+        </a></td>
         </tr>
         <tr>
           <td>Immagine 4</td>
-          <td><button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button></td>
+          <td><a href="admin.html" style="text-decoration: none;">
+            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
+        </a></td>
         </tr>
         <tr>
           <td>Immagine 5</td>
-          <td><button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button></td>
+          <td><a href="admin.html" style="text-decoration: none;">
+            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
+        </a></td>
         </tr>
         <tr>
           <td>Immagine 6</td>
-          <td><button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button></td>
+          <td><a href="admin.html" style="text-decoration: none;">
+            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
+        </a></td>
         </tr>
         <tr>
           <td>Immagine 7</td>
-          <td><button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button></td>
+          <td><a href="admin.html" style="text-decoration: none;">
+            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
+        </a></td>
         </tr>
         <tr>
           <td>Immagine 8</td>
-          <td><button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button></td>
+          <td><a href="admin.html" style="text-decoration: none;">
+            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
+        </a></td>
         </tr>
         <tr>
           <td>Immagine 9</td>
-          <td><button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button></td>
+          <td><a href="admin.html" style="text-decoration: none;">
+            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
+        </a></td>
         </tr>
         <tr>
           <td>Immagine 10</td>
-          <td><button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button></td>
+          <td><a href="admin.html" style="text-decoration: none;">
+            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
+        </a></td>
         </tr>
       </tbody>
     </table>
