--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
             
             
         </form>
-        <a href="admin.html" style="text-decoration: none;">
+        <a href="adminTable.html" style="text-decoration: none;">
             <button type="submit">login</button>
         </a>
     </div>
