--- a/admin.html
+++ b/admin.html
@@ -16,8 +16,23 @@
             </div>
 
             <div class="form-group">
-                <label for="position">Posizione</label>
-                <input type="text" id="position" name="position">
+                <label for="periodo">Periodo</label>
+                <input type="text" id="periodo" name="periodo">
+            </div>
+
+            <div class="form-group">
+                <label for="luogo">Luogo</label>
+                <input type="text" id="luogo" name="luogo">
+            </div>
+
+            <div class="form-group">
+                <label for="Esito">Esito</label>
+                <input type="text" id="esito" name="esito">
+            </div>
+
+            <div class="form-group">
+                <label for="morti">Morti</label>
+                <input type="text" id="morti" name="morti">
             </div>
 
             <div class="form-group">
