--- a/htmlPages/adminTable.html
+++ b/htmlPages/adminTable.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gestione Immagini</title>
-  <link rel="stylesheet" href="adminTable.css">
+  <link rel="stylesheet" href="styles/adminTable.css">
 </head>
 <body>
   <div class="container">
