sistemazione collegamenti immagini

--- a/index.html
+++ b/index.html
@@ -115,19 +115,19 @@
         <section id="umloggetti">
           <h2>Diagrammi di oggetti</h2>
           <p class="lead">Qui vanno inseriti il diagramma di oggetti (immagini)</p>          
-          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\diagramma_oggetti.png " alt="..." style="width: 30%;">
+          <img src="/data\images\diagramma_oggetti.png " alt="..." style="width: 30%;">
         </section>
 
         <section id="umlstato">
           <h2>Diagrammi di Stato</h2>
           <p class="lead">Qui vanno inseriti i diagrammi di stato (immagini). </p>          
-          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\stato.png " alt="..." style="height: 5%;">
+          <img src="/data\images\stato.png " alt="..." style="height: 5%;">
         </section>
 
         <section id="umlsequenza">
           <h2>Diagrammi di Sequenza</h2>
           <p class="lead">Qui vanno inserito il diagrammi di sequenza (immagini)</p>          
-          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\sequenza.png" alt="..." style="width: 25%;">
+          <img src="/data\images\sequenza.png" alt="..." style="width: 25%;">
         </section>
 
         <hr class="divider">
@@ -136,9 +136,9 @@
           <h2>Contenuti del progetto</h2>
           <p class="lead">In questa sezione vanno inseriti i contenuti, organizzati in tabella e con un numero di immagini significative
           </p>
-          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\luogo1.png" alt="..."/>
+          <img src="/data/images/luogo1.png" alt="..."/>
           <br>
-          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\luogo2.png" alt="..."/>
+          <img src="/data\images\luogo2.png" alt="..."/>
           
         </section>
 
@@ -147,9 +147,9 @@
         <section id="wireframes">
           <h2>Wireframes</h2>
           <p class="lead">In questa sezione vanno inseriti i wireframes o la storyboard di progetto.</p>
-          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\wireframe1.png" alt="..." style="width: 25%;"/>
-          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\wireframe2.png" alt="..." style="width: 25%;"/>
-          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\wireframe3.png" alt="..." style="width: 25%;"/>
+          <img src="/data\images\wireframe1.png" alt="..." style="width: 25%;"/>
+          <img src="/data\images\wireframe2.png" alt="..." style="width: 25%;"/>
+          <img src="/data\images\wireframe3.png" alt="..." style="width: 25%;"/>
            <hr class="divider">
 
           <section id="progetto">
