--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
 			<div class="col-sm-6 col-lg-4">
 				<ul class="list-unstyled">
 					<li><strong>Classe/Anno:</strong> 5C INF - 24/25</li>
-					<li><strong>Author:</strong> Brambilla, Bianchin , Di Donna</li>
+					<li><strong>Author:</strong> Brambilla - Bianchin - Di Donna</li>
 				</ul>
 			</div>
 			<div class="col-sm-6 col-lg-4">
 				<ul class="list-unstyled">
 					<li><strong class="font-weight-700">Creato:</strong> 16 dicembre 2024</li>
-					<li><strong>Ultima modifica:</strong> 20 gennaio 2025</li>
+					<li><strong>Ultima modifica:</strong> 14 Gennaio 2025</li>
 				</ul>
 			</div>
 		</div>
