--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <section id="umlstato">
           <h2>Diagrammi di Stato</h2>
           <p class="lead">Qui vanno inseriti i diagrammi di stato (immagini). </p>          
-          <img src="/data\images\stato.png " alt="..." style="height: 5%;">
+          <img src="/data\images\stato.png " alt="..." style="width: 5%;">
         </section>
 
         <section id="umlsequenza">
@@ -147,7 +147,7 @@
         <section id="wireframes">
           <h2>Wireframes</h2>
           <p class="lead">In questa sezione vanno inseriti i wireframes o la storyboard di progetto.</p>
-          <img src="/data\images\wireframe1.png" alt="..." style="width: 25%;"/>
+          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\wireframe1.png" alt="..." style="width: 25%;"/>
           <img src="/data\images\wireframe2.png" alt="..." style="width: 25%;"/>
           <img src="/data\images\wireframe3.png" alt="..." style="width: 25%;"/>
            <hr class="divider">
