--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
         <section id="umlstato">
           <h2>Diagrammi di Stato</h2>
           <p class="lead">Qui vanno inseriti i diagrammi di stato (immagini). </p>          
-          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\stato.png " alt="..." style="width: 5%;">
+          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\stato.png " alt="..." style="width: 25%;">
         </section>
 
         <section id="umlsequenza">
           <h2>Diagrammi di Sequenza</h2>
           <p class="lead">Qui vanno inserito il diagrammi di sequenza (immagini)</p>          
-          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\sequenza.png" alt="..." style="width: 25%;">
+          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\sequenza.png" alt="..." style="width: 40%;">
         </section>
 
         <hr class="divider">
@@ -136,9 +136,9 @@
           <h2>Contenuti del progetto</h2>
           <p class="lead">In questa sezione vanno inseriti i contenuti, organizzati in tabella e con un numero di immagini significative
           </p>
-          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\luogo1.png" alt="..."/>
+          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\luogo1.png" alt="..."style="width: 25%;"/>
           <br>
-          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\luogo2.png" alt="..."/>
+          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\luogo2.png" alt="..."style="width: 25%;"/>
           
         </section>
 
@@ -149,7 +149,8 @@
           <p class="lead">In questa sezione vanno inseriti i wireframes o la storyboard di progetto.</p>
           <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\wireframe1.png" alt="..." style="width: 25%;"/>
           <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\wireframe2.png" alt="..." style="width: 25%;"/>
-          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\wireframe3.png" alt="..." style="width: 25%;"/>
+          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\admin1.png" alt="..." style="width: 25%;"/>
+          <img src="/5C_BrambillaBianchinDiDonna_POI\data\images\admin2.png" alt="..." style="width: 25%;"/>
            <hr class="divider">
 
           <section id="progetto">
