--- a/htmlPages/adminTable.html
+++ b/htmlPages/adminTable.html
@@ -18,66 +18,78 @@
       <tbody>
         <tr>
           <td>Immagine 1</td>
-
           <td>
             <a href="admin.html" style="text-decoration: none;">
-              <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
+              <button class="btn modifica">modifica</button> 
           </a>
+          <button class="btn elimina">elimina</button>
         </td>
         </tr>
         <tr>
           <td>Immagine 2</td>
           <td><a href="admin.html" style="text-decoration: none;">
-            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
-        </a></td>
+            <button class="btn modifica">modifica</button> 
+        </a>
+        <button class="btn elimina">elimina</button>
+      </td>
         </tr>
         <tr>
           <td>Immagine 3</td>
           <td><a href="admin.html" style="text-decoration: none;">
-            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
-        </a></td>
+            <button class="btn modifica">modifica</button> 
+        </a>
+        <button class="btn elimina">elimina</button>
+      </td>
         </tr>
         <tr>
           <td>Immagine 4</td>
           <td><a href="admin.html" style="text-decoration: none;">
-            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
-        </a></td>
+            <button class="btn modifica">modifica</button>
+        </a>
+        <button class="btn elimina">elimina</button>
+      </td>
         </tr>
         <tr>
           <td>Immagine 5</td>
           <td><a href="admin.html" style="text-decoration: none;">
-            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
-        </a></td>
+            <button class="btn modifica">modifica</button>
+        </a>
+        <button class="btn elimina">elimina</button></td>
         </tr>
         <tr>
           <td>Immagine 6</td>
           <td><a href="admin.html" style="text-decoration: none;">
-            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
-        </a></td>
+            <button class="btn modifica">modifica</button> 
+        </a>
+        <button class="btn elimina">elimina</button></td>
         </tr>
         <tr>
           <td>Immagine 7</td>
           <td><a href="admin.html" style="text-decoration: none;">
-            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
-        </a></td>
+            <button class="btn modifica">modifica</button> 
+        </a>
+        <button class="btn elimina">elimina</button></td>
         </tr>
         <tr>
           <td>Immagine 8</td>
           <td><a href="admin.html" style="text-decoration: none;">
-            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
-        </a></td>
+            <button class="btn modifica">modifica</button>
+        </a>
+        <button class="btn elimina">elimina</button></td>
         </tr>
         <tr>
           <td>Immagine 9</td>
           <td><a href="admin.html" style="text-decoration: none;">
-            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
-        </a></td>
+            <button class="btn modifica">modifica</button> 
+        </a>
+        <button class="btn elimina">elimina</button></td>
         </tr>
         <tr>
           <td>Immagine 10</td>
           <td><a href="admin.html" style="text-decoration: none;">
-            <button class="btn modifica">modifica</button> <button class="btn elimina">elimina</button>
-        </a></td>
+            <button class="btn modifica">modifica</button> 
+        </a>
+        <button class="btn elimina">elimina</button></td>
         </tr>
       </tbody>
     </table>
