creazione cartella x immagini - predisposizione AdminTable x immagini e titoli

--- a/htmlPages/adminTable.html
+++ b/htmlPages/adminTable.html
@@ -11,13 +11,16 @@
     <table>
       <thead>
         <tr>
-          <th>Immagine</th>
+          <th>Luogo</th>
           <th>Azioni</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>Immagine 1</td>
+          <td>
+            <p>Titolo</p>
+            <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/" alt="..." style="width: 30%;">
+          </td>
           <td>
             <a href="admin.html" style="text-decoration: none;">
               <button class="btn modifica">modifica</button> 
@@ -26,7 +29,10 @@
         </td>
         </tr>
         <tr>
-          <td>Immagine 2</td>
+          <td>
+            <p>Titolo</p>
+            <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/" alt="..." style="width: 30%;">
+          </td>
           <td><a href="admin.html" style="text-decoration: none;">
             <button class="btn modifica">modifica</button> 
         </a>
@@ -34,7 +40,10 @@
       </td>
         </tr>
         <tr>
-          <td>Immagine 3</td>
+          <td>
+            <p>Titolo</p>
+            <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/" alt="..." style="width: 30%;">
+          </td>
           <td><a href="admin.html" style="text-decoration: none;">
             <button class="btn modifica">modifica</button> 
         </a>
@@ -42,7 +51,10 @@
       </td>
         </tr>
         <tr>
-          <td>Immagine 4</td>
+          <td>
+            <p>Titolo</p>
+            <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/" alt="..." style="width: 30%;">
+          </td>
           <td><a href="admin.html" style="text-decoration: none;">
             <button class="btn modifica">modifica</button>
         </a>
@@ -50,42 +62,60 @@
       </td>
         </tr>
         <tr>
-          <td>Immagine 5</td>
+          <td>
+            <p>Titolo</p>
+            <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/" alt="..." style="width: 30%;">
+          </td>
           <td><a href="admin.html" style="text-decoration: none;">
             <button class="btn modifica">modifica</button>
         </a>
         <button class="btn elimina">elimina</button></td>
         </tr>
         <tr>
-          <td>Immagine 6</td>
+          <td>
+            <p>Titolo</p>
+            <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/" alt="..." style="width: 30%;">
+          </td>
           <td><a href="admin.html" style="text-decoration: none;">
             <button class="btn modifica">modifica</button> 
         </a>
         <button class="btn elimina">elimina</button></td>
         </tr>
         <tr>
-          <td>Immagine 7</td>
+          <td>
+            <p>Titolo</p>
+            <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/" alt="..." style="width: 30%;">
+          </td>
           <td><a href="admin.html" style="text-decoration: none;">
             <button class="btn modifica">modifica</button> 
         </a>
         <button class="btn elimina">elimina</button></td>
         </tr>
         <tr>
-          <td>Immagine 8</td>
+          <td>
+            <p>Titolo</p>
+            <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/" alt="..." style="width: 30%;">
+          </td>
           <td><a href="admin.html" style="text-decoration: none;">
             <button class="btn modifica">modifica</button>
         </a>
         <button class="btn elimina">elimina</button></td>
         </tr>
         <tr>
-          <td>Immagine 9</td>
+          <td>
+            <p>Titolo</p>
+            <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/" alt="..." style="width: 30%;">
+          </td>
           <td><a href="admin.html" style="text-decoration: none;">
             <button class="btn modifica">modifica</button> 
         </a>
         <button class="btn elimina">elimina</button></td>
         </tr>
         <tr>
-          <td>Immagine 10</td>
+          <td>
+            <p>Titolo</p>
+            <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/" alt="..." style="width: 30%;">
+          </td>
           <td><a href="admin.html" style="text-decoration: none;">
             <button class="btn modifica">modifica</button> 
         </a>
