1. creazione cartelle per ordine - 2. creazione bottone back con immagine - 3. risistemazione dei path per imaggini

--- a/htmlPages/admin.html
+++ b/htmlPages/admin.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <div class="admin-container">
+        <a href="adminTable.html" style="text-decoration: none;">
+            <img src="/5C_BrambillaBianchinDiDonna_POI/data/images/back.jpg" alt="..." style="width: 10%;">
+        </a>
         <h1>Admin</h1>
         <form>
+            
             <div class="form-group">
                 <label for="title">Titolo</label>
                 <input type="text" id="title" name="title">
@@ -44,11 +48,7 @@
                 <label for="image">Immagine</label>
                 <input type="text" id="image" name="image">
             </div>
-
-            <a href="adminTable.html" style="text-decoration: none;">
-                <button type="button">Back</button>
-            </a>
-
+            
             <a href="page.html" style="text-decoration: none;">
                 <button type="button">Home</button>
             </a>
