--- a/htmlPages/adminTable.html
+++ b/htmlPages/adminTable.html
@@ -24,8 +24,7 @@
           <td>
             <a href="admin.html" style="text-decoration: none;">
               <button class="btn modifica">modifica</button> 
-          </a>
-          <button class="btn elimina">elimina</button>
+          </a> <button class="btn elimina">elimina</button>
         </td>
         </tr>
         <tr>
