--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="/htmlPages/styles/style.css">
+  <link rel="stylesheet" href="/htmlPages/styles/login.css">
+  <link rel="stylesheet" href="/htmlPages/styles/admin.css">
+  <link rel="stylesheet" href="/htmlPages/styles/adminTable.css">
   <title>-</title>
-  <style>
-    #map{
-      width: 50rem;
-      height: 15vh;
-    }
-  </style>
 </head>
 
 <body id="contenitore">
@@ -24,6 +21,9 @@
           <h1>Battaglie Italiane WWI</h1>
           <h4>In questo sito vedremo i luoghi e la storia delle battaglie della WWI in Italia</h4>
         </div>
+      </div>
+      <div class="row">
+        <div class="col" id="map"></div>
       </div>
       <div class="row justify-content-center">
         <div class="col-12">
@@ -68,7 +68,6 @@
               tabindex="0"></div>
           </div>
         </div>
-        <div id="map"></div>
         <div class="col-12">
           <table class="table table-bordered">
             <tr>
@@ -90,9 +89,12 @@
     </div>
   </div>
 
+
+
+
   <div id="admin" class="pages hide">
     <div class="admin-container">
-      <a href="#login" style="text-decoration: none;">
+      <a href="#adminTable" style="text-decoration: none;">
         <img src="/data/images/back.jpg" alt="..." style="width: 10%;">
       </a>
       <h1>Admin</h1>
@@ -133,7 +135,7 @@
           <input type="text" id="image" name="image">
         </div>
 
-        <a href="page.html" style="text-decoration: none;">
+        <a href="#home" style="text-decoration: none;">
           <button type="button">Home</button>
         </a>
 
@@ -153,7 +155,7 @@
 
 
       </form>
-      <a href="adminTable.html" style="text-decoration: none;">
+      <a href="#adminTable" style="text-decoration: none;">
         <button type="submit">login</button>
       </a>
     </div>
@@ -176,7 +178,7 @@
               <p>Alpi Giulie-Isonzo-Basso Friuli</p>
             </td>
             <td>
-              <a href="admin.html" style="text-decoration: none;">
+              <a href="#admin" style="text-decoration: none;">
                 <button class="btn modifica">modifica</button>
               </a> <button class="btn elimina">elimina</button>
             </td>
@@ -188,7 +190,7 @@
                 style="width: 30%;">
               <p>Dolomiti-Alpi Carniche</p>
             </td>
-            <td><a href="admin.html" style="text-decoration: none;">
+            <td><a href="#admin" style="text-decoration: none;">
                 <button class="btn modifica">modifica</button>
               </a>
               <button class="btn elimina">elimina</button>
@@ -201,7 +203,7 @@
                 style="width: 30%;">
               <p>Garda Altipiani</p>
             </td>
-            <td><a href="admin.html" style="text-decoration: none;">
+            <td><a href="#admin" style="text-decoration: none;">
                 <button class="btn modifica">modifica</button>
               </a>
               <button class="btn elimina">elimina</button>
@@ -214,7 +216,7 @@
                 style="width: 30%;">
               <p>Medio-Basso Piave</p>
             </td>
-            <td><a href="admin.html" style="text-decoration: none;">
+            <td><a href="#admin" style="text-decoration: none;">
                 <button class="btn modifica">modifica</button>
               </a>
               <button class="btn elimina">elimina</button>
@@ -227,7 +229,7 @@
                 style="width: 30%;">
               <p>Monte Grappa</p>
             </td>
-            <td><a href="admin.html" style="text-decoration: none;">
+            <td><a href="#admin" style="text-decoration: none;">
                 <button class="btn modifica">modifica</button>
               </a>
               <button class="btn elimina">elimina</button>
@@ -240,7 +242,7 @@
                 style="width: 30%;">
               <p>Monte San Michele</p>
             </td>
-            <td><a href="admin.html" style="text-decoration: none;">
+            <td><a href="#admin" style="text-decoration: none;">
                 <button class="btn modifica">modifica</button>
               </a>
               <button class="btn elimina">elimina</button>
@@ -253,7 +255,7 @@
                 style="width: 30%;">
               <p>Ortles Cevedale Adamello</p>
             </td>
-            <td><a href="admin.html" style="text-decoration: none;">
+            <td><a href="#admin" style="text-decoration: none;">
                 <button class="btn modifica">modifica</button>
               </a>
               <button class="btn elimina">elimina</button>
@@ -265,7 +267,7 @@
               <img src="/data/placesImage/trieste.jpg" alt="..." style="width: 30%;">
               <p>Trieste</p>
             </td>
-            <td><a href="admin.html" style="text-decoration: none;">
+            <td><a href="#admin" style="text-decoration: none;">
                 <button class="btn modifica">modifica</button>
               </a>
               <button class="btn elimina">elimina</button>
@@ -278,7 +280,7 @@
                 style="width: 30%;">
               <p>Villa Giusti</p>
             </td>
-            <td><a href="admin.html" style="text-decoration: none;">
+            <td><a href="#admin" style="text-decoration: none;">
                 <button class="btn modifica">modifica</button>
               </a>
               <button class="btn elimina">elimina</button>
@@ -291,7 +293,7 @@
                 style="width: 30%;">
               <p>Vittorio Veneto</p>
             </td>
-            <td><a href="admin.html" style="text-decoration: none;">
+            <td><a href="#admin" style="text-decoration: none;">
                 <button class="btn modifica">modifica</button>
               </a>
               <button class="btn elimina">elimina</button>
