--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/5C_BrambillaBianchinDiDonna_POI/htmlPages/styles/login.css">
   <link rel="stylesheet" href="/5C_BrambillaBianchinDiDonna_POI/htmlPages/styles/admin.css">
   <link rel="stylesheet" href="/5C_BrambillaBianchinDiDonna_POI/htmlPages/styles/adminTable.css">
-  <title>-</title>
+  <title>WWI</title>
 </head>
 
 <body id="contenitore">
@@ -81,7 +81,7 @@
             </tr>
           </table>
           <a href="#paginaLogin" style="text-decoration: none;">
-            <button class="btn btn-success">admin</button>
+            <button class="btn btn-success" id="adminButton">admin</button>
           </a>
 
         </div>
@@ -95,7 +95,7 @@
   <div id="admin" class="pages hide">
     <div class="admin-container">
       <a href="#adminTable" style="text-decoration: none;">
-        <img src="/data/images/back.jpg" alt="..." style="width: 10%;">
+        <img src="/5C_BrambillaBianchinDiDonna_POI/data/images/back.jpg" alt="" style="width: 10%;">
       </a>
       <h1>Admin</h1>
       <form>
@@ -173,7 +173,7 @@
         <tbody>
           <tr>
             <td>
-              <img src="/data/placesImage/Alpi Giulie-Isonzo-Basso Friuli.jpg"
+              <img src="/5C_BrambillaBianchinDiDonna_POI\data\placesImage\Alpi Giulie-Isonzo-Basso Friuli.jpg"
                 alt="..." style="width: 30%;">
               <p>Alpi Giulie-Isonzo-Basso Friuli</p>
             </td>
@@ -186,7 +186,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/Dolomiti-Alpi Carniche.jpg" alt="..."
+              <img src="/5C_BrambillaBianchinDiDonna_POI\data\placesImage\Dolomiti-Alpi Carniche.jpg" alt="..."
                 style="width: 30%;">
               <p>Dolomiti-Alpi Carniche</p>
             </td>
@@ -199,7 +199,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/garda altipiani.jpg" alt="..."
+              <img src="/5C_BrambillaBianchinDiDonna_POI\data\placesImage\garda altipiani.jpg" alt="..."
                 style="width: 30%;">
               <p>Garda Altipiani</p>
             </td>
@@ -212,8 +212,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/medi-basso piave.jpg" alt="..."
-                style="width: 30%;">
+              <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/medi-basso piave.jpg" alt="..."style="width: 30%;">
               <p>Medio-Basso Piave</p>
             </td>
             <td><a href="#admin" style="text-decoration: none;">
@@ -225,7 +224,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/monte grappa.jpg" alt="..."
+              <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/monte grappa.jpg" alt="..."
                 style="width: 30%;">
               <p>Monte Grappa</p>
             </td>
@@ -238,7 +237,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/monte san michele.jpg" alt="..."
+              <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/monte san michele.jpg" alt="..."
                 style="width: 30%;">
               <p>Monte San Michele</p>
             </td>
@@ -251,8 +250,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/ortles cevedale adamello.jpg" alt="..."
-                style="width: 30%;">
+              <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/ortles cevedale adamello.jpg" alt="" style="width: 30%;">
               <p>Ortles Cevedale Adamello</p>
             </td>
             <td><a href="#admin" style="text-decoration: none;">
@@ -264,7 +262,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/trieste.jpg" alt="..." style="width: 30%;">
+              <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/trieste.jpg" alt="..." style="width: 30%;">
               <p>Trieste</p>
             </td>
             <td><a href="#admin" style="text-decoration: none;">
@@ -276,8 +274,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/villa giusti.jpg" alt="..."
-                style="width: 30%;">
+              <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/villa giusti.jpg" alt="..." style="width: 30%;">
               <p>Villa Giusti</p>
             </td>
             <td><a href="#admin" style="text-decoration: none;">
@@ -289,7 +286,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/vittorio veneto.jpg" alt="..."
+              <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/vittorio veneto.jpg" alt="..."
                 style="width: 30%;">
               <p>Vittorio Veneto</p>
             </td>
@@ -307,7 +304,7 @@
   <script type="module" src="./index.js"></script>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
   integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-<script src="/src/index.js" type="module"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
   integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
   crossorigin="anonymous"></script>
@@ -315,5 +312,6 @@
   integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
   crossorigin="anonymous"></script>
 </body>
+
 
 </html>
