--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="/5C_BrambillaBianchinDiDonna_POI/htmlPages/styles/style.css">
   <link rel="stylesheet" href="/5C_BrambillaBianchinDiDonna_POI/htmlPages/styles/login.css">
   <link rel="stylesheet" href="/5C_BrambillaBianchinDiDonna_POI/htmlPages/styles/admin.css">
@@ -27,32 +27,236 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-12">
-          <nav>
-            <div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
-              <button class="nav-link" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button"
-                role="tab" aria-controls="nav-home" aria-selected="true">Dolomiti-Alpi Carniche</button>
-              <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile"
-                type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Alpi Giulie-Isonzo-Basso
-                Friuli</button>
-              <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact"
-                type="button" role="tab" aria-controls="nav-contact"
-                aria-selected="false">Ortles-Cevedale-Adamello</button>
-              <button class="nav-link" id="nav-disabled-tab" data-bs-toggle="tab" data-bs-target="#nav-disabled"
-                type="button" role="tab" aria-controls="nav-disabled" aria-selected="false">Garda-Altipiani</button>
-              <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact"
-                type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Monte San Michele</button>
-              <button class="nav-link" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button"
-                role="tab" aria-controls="nav-home" aria-selected="true">Medio-basso Piave</button>
-              <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile"
-                type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Monte Grappa</button>
-              <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact"
-                type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Vittorio Veneto</button>
-              <button class="nav-link" id="nav-disabled-tab" data-bs-toggle="tab" data-bs-target="#nav-disabled"
-                type="button" role="tab" aria-controls="nav-disabled" aria-selected="false">Trieste</button>
-              <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact"
-                type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Villa Giusti</button>
+          <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Modali per tutti i Bottoni</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+  <nav>
+    <div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
+
+      <!-- Bottone e Modale per Dolomiti-Alpi Carniche -->
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalAlpiCarniche">
+        Dolomiti-Alpi Carniche
+      </button>
+      <div class="modal fade" id="modalAlpiCarniche" tabindex="-1" aria-labelledby="modalAlpiCarnicheLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="modalAlpiCarnicheLabel">Dolomiti-Alpi Carniche</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-          </nav>
+            <div class="modal-body">
+              Descrizione delle Dolomiti-Alpi Carniche.
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bottone e Modale per Alpi Giulie-Isonzo-Basso Friuli -->
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalAlpiGiulie">
+        Alpi Giulie-Isonzo-Basso Friuli
+      </button>
+      <div class="modal fade" id="modalAlpiGiulie" tabindex="-1" aria-labelledby="modalAlpiGiulieLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="modalAlpiGiulieLabel">Alpi Giulie-Isonzo-Basso Friuli</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Descrizione delle Alpi Giulie, Isonzo e Basso Friuli.
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bottone e Modale per Ortles-Cevedale-Adamello -->
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalOrtles">
+        Ortles-Cevedale-Adamello
+      </button>
+      <div class="modal fade" id="modalOrtles" tabindex="-1" aria-labelledby="modalOrtlesLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="modalOrtlesLabel">Ortles-Cevedale-Adamello</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Descrizione di Ortles, Cevedale e Adamello.
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bottone e Modale per Garda-Altipiani -->
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalGarda">
+        Garda-Altipiani
+      </button>
+      <div class="modal fade" id="modalGarda" tabindex="-1" aria-labelledby="modalGardaLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="modalGardaLabel">Garda-Altipiani</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Descrizione di Garda e Altipiani.
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bottone e Modale per Monte San Michele -->
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalMonteSanMichele">
+        Monte San Michele
+      </button>
+      <div class="modal fade" id="modalMonteSanMichele" tabindex="-1" aria-labelledby="modalMonteSanMicheleLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="modalMonteSanMicheleLabel">Monte San Michele</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Descrizione del Monte San Michele.
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bottone e Modale per Medio-basso Piave -->
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalMedioBassoPiave">
+        Medio-basso Piave
+      </button>
+      <div class="modal fade" id="modalMedioBassoPiave" tabindex="-1" aria-labelledby="modalMedioBassoPiaveLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="modalMedioBassoPiaveLabel">Medio-basso Piave</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Descrizione del Medio-basso Piave.
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bottone e Modale per Monte Grappa -->
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalMonteGrappa">
+        Monte Grappa
+      </button>
+      <div class="modal fade" id="modalMonteGrappa" tabindex="-1" aria-labelledby="modalMonteGrappaLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="modalMonteGrappaLabel">Monte Grappa</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Descrizione del Monte Grappa.
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bottone e Modale per Vittorio Veneto -->
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalVittorioVeneto">
+        Vittorio Veneto
+      </button>
+      <div class="modal fade" id="modalVittorioVeneto" tabindex="-1" aria-labelledby="modalVittorioVenetoLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="modalVittorioVenetoLabel">Vittorio Veneto</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Descrizione di Vittorio Veneto.
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bottone e Modale per Trieste -->
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalTrieste">
+        Trieste
+      </button>
+      <div class="modal fade" id="modalTrieste" tabindex="-1" aria-labelledby="modalTriesteLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="modalTriesteLabel">Trieste</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Descrizione di Trieste.
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bottone e Modale per Villa Giusti -->
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalVillaGiusti">
+        Villa Giusti
+      </button>
+      <div class="modal fade" id="modalVillaGiusti" tabindex="-1" aria-labelledby="modalVillaGiustiLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="modalVillaGiustiLabel">Villa Giusti</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Descrizione di Villa Giusti.
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </nav>
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+</body>
+</html>
+
         </div>
       </div>
       <div class="row justify-content-center">
@@ -305,12 +509,13 @@
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
   integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
   integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
   crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
   integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
   crossorigin="anonymous"></script>
+
 </body>
 
 
