--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="/htmlPages/styles/style.css">
-  <link rel="stylesheet" href="//htmlPages/styles/login.css">
+  <link rel="stylesheet" href="/htmlPages/styles/login.css">
   <link rel="stylesheet" href="/htmlPages/styles/admin.css">
   <link rel="stylesheet" href="/htmlPages/styles/adminTable.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -33,7 +33,6 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-12">
-
 
   <nav>
     <div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
