--- a/src/index.html
+++ b/src/index.html
@@ -266,18 +266,7 @@
               tabindex="0"></div>
           </div>
         </div>
-        <div class="col-12">
-          <table class="table table-bordered">
-            <tr>
-              <td>Dolomiti</td>
-            </tr>
-            <tr>
-              <td>Alpi Carniche</td>
-            </tr>
-            <tr>
-              <td>...</td>
-            </tr>
-          </table>
+        <div class="col-12" id="tabella">
           <a href="#paginaLogin" style="text-decoration: none;">
             <button class="btn btn-success" id="adminButton">admin</button>
           </a>
