--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="/5C_BrambillaBianchinDiDonna_POI/htmlPages/styles/style.css">
-  <link rel="stylesheet" href="/5C_BrambillaBianchinDiDonna_POI/htmlPages/styles/login.css">
-  <link rel="stylesheet" href="/5C_BrambillaBianchinDiDonna_POI/htmlPages/styles/admin.css">
-  <link rel="stylesheet" href="/5C_BrambillaBianchinDiDonna_POI/htmlPages/styles/adminTable.css">
+  <link rel="stylesheet" href="/htmlPages/styles/style.css">
+  <link rel="stylesheet" href="/htmlPages/styles/login.css">
+  <link rel="stylesheet" href="/htmlPages/styles/admin.css">
+  <link rel="stylesheet" href="/htmlPages/styles/adminTable.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
@@ -339,12 +339,12 @@
 
         <label for="password">Password</label>
         <input type="password" id="password" name="password">
-
-
       </form>
-      <a href="#adminTable" style="text-decoration: none;">
-        <button type="submit">login</button>
+      
+        <button type="submit" id="credentialLogin">login</button>
       </a>
+      <div id="errorMessage">
+      </div>
     </div>
   </div>
 
