--- a/src/index.html
+++ b/src/index.html
@@ -317,6 +317,9 @@
         <a href="#home" style="text-decoration: none;">
           <button type="button">Home</button>
         </a>
+        <a href="#adminTable" style="text-decoration: none;">
+          <button type="button">invio</button>
+        </a>
 
       </form>
     </div>
