--- a/src/index.html
+++ b/src/index.html
@@ -284,15 +284,7 @@
           <input type="text" id="title" name="title">
         </div>
 
-        <div class="form-group">
-          <label for="periodo">Periodo</label>
-          <input type="text" id="periodo" name="periodo">
-        </div>
-
-        <div class="form-group">
-          <label for="luogo">Luogo</label>
-          <input type="text" id="luogo" name="luogo">
-        </div>
+       
 
         <div class="form-group">
           <label for="Esito">Esito</label>
@@ -309,16 +301,12 @@
           <input type="text" id="description" name="description">
         </div>
 
-        <div class="form-group">
-          <label for="image">Immagine</label>
-          <input type="text" id="image" name="image">
-        </div>
-
+        
         <a href="#home" style="text-decoration: none;">
           <button type="button">Home</button>
         </a>
         <a href="#adminTable" style="text-decoration: none;">
-          <button type="button">invio</button>
+          <button type="button" id="invioButton">invio</button>
         </a>
 
       </form>
