sistemato link html

--- a/index.html
+++ b/index.html
@@ -115,19 +115,19 @@
         <section id="umloggetti">
           <h2>Diagrammi di oggetti</h2>
           <p class="lead">Qui vanno inseriti il diagramma di oggetti (immagini)</p>          
-          <img src="\data\DocumentationImages\diagramma_oggetti.png" alt="..." style="width: 30%;">
+          <img src="/5C_BrambillaBianchinDiDonna_POI/data/DocumentationImages/diagramma_oggetti.png" alt="..." style="width: 30%;">
         </section>
 
         <section id="umlstato">
           <h2>Diagrammi di Stato</h2>
           <p class="lead">Qui vanno inseriti i diagrammi di stato (immagini). </p>          
-          <img src="\data\DocumentationImages\stato.png " alt="..." style="width: 25%;">
+          <img src="/5C_BrambillaBianchinDiDonna_POI/data/DocumentationImages/stato.png " alt="..." style="width: 25%;">
         </section>
 
         <section id="umlsequenza">
           <h2>Diagrammi di Sequenza</h2>
           <p class="lead">Qui vanno inserito il diagrammi di sequenza (immagini)</p>          
-          <img src="\data\DocumentationImages\sequenza.png" alt="..." style="width: 40%;">
+          <img src="/5C_BrambillaBianchinDiDonna_POI/data/DocumentationImages/sequenza.png" alt="..." style="width: 40%;">
         </section>
 
         <hr class="divider">
@@ -136,9 +136,9 @@
           <h2>Contenuti del progetto</h2>
           <p class="lead">In questa sezione vanno inseriti i contenuti, organizzati in tabella e con un numero di immagini significative
           </p>
-          <img src="\data\DocumentationImages\luogo1.png" alt="..."style="width: 25%;"/>
+          <img src="/5C_BrambillaBianchinDiDonna_POI/data/DocumentationImages/luogo1.png" alt="..."style="width: 25%;"/>
           <br>
-          <img src="\data\DocumentationImages\luogo2.png" alt="..."style="width: 25%;"/>
+          <img src="/5C_BrambillaBianchinDiDonna_POI/data/DocumentationImages/luogo2.png" alt="..."style="width: 25%;"/>
           
         </section>
 
@@ -147,10 +147,10 @@
         <section id="wireframes">
           <h2>Wireframes</h2>
           <p class="lead">In questa sezione vanno inseriti i wireframes o la storyboard di progetto.</p>
-          <img src="\data\DocumentationImages\wireframe1.png" alt="..." style="width: 25%;"/>
-          <img src="\data\DocumentationImages\wireframe2.png" alt="..." style="width: 25%;"/>
-          <img src="\data\DocumentationImages\admin1.png" alt="..." style="width: 25%;"/>
-          <img src="\data\DocumentationImages\admin2.png" alt="..." style="width: 25%;"/>
+          <img src="/5C_BrambillaBianchinDiDonna_POI/data/DocumentationImages/wireframe1.png" alt="..." style="width: 25%;"/>
+          <img src="/5C_BrambillaBianchinDiDonna_POI/data/DocumentationImages/wireframe2.png" alt="..." style="width: 25%;"/>
+          <img src="/5C_BrambillaBianchinDiDonna_POI/data/DocumentationImages/admin1.png" alt="..." style="width: 25%;"/>
+          <img src="/5C_BrambillaBianchinDiDonna_POI/data/DocumentationImages/admin2.png" alt="..." style="width: 25%;"/>
            <hr class="divider">
 
           <section id="progetto">
@@ -159,7 +159,7 @@
 
             <section id="link">
             <h2>Link al progetto</h2>
-            <a href="/src/index.html">Link al progetto</a>
+            <a href="/5C_BrambillaBianchinDiDonna_POI/src/index.html">Link al progetto</a>
 
         </section>
         
